--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,29 +4,44 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "Accueil"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Compétences"
+  url = "#skills"
+  weight = 15
+
+[[main]]
+  name = "Expériences"
+  url = "#experience"
+  weight = 12
+
+[[main]]
+  name = "Certifications"
+  url = "#accomplishments"
+  weight = 13
+
+[[main]]
+  name = "Articles"
   url = "#posts"
   weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Talks"
-  url = "#talks"
-  weight = 40
-
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 50
+#[[main]]
+#  name = "Projects"
+#  url = "#projects"
+#  weight = 30
+#
+#[[main]]
+#  name = "Talks"
+#  url = "#talks"
+#  weight = 40
+#
+#[[main]]
+#  name = "Publications"
+#  url = "#featured"
+#  weight = 50
 
 [[main]]
   name = "Contact"
