--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,8 +88,8 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-#email = ""
-email = "florian@flolaco.ovh"
+email = ""
+#email = "florian@flolaco.ovh"
 phone = ""
 
 # Address
